# fnutil

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fnutil/: __init__.py  __init__.pyi  _protocols.py  _protocols.pyi  expression.py  expression.pyi  iterator.py  iterator.pyi
tests/: test_expression.py  test_iterator.py
